# WP-KERNEL-011 — Handshake native Rust GUI. Long-term home of ALL native GUI code (no webview,
# no Tauri, no Electron). Versions are the MT-001 spike-verdict proven pins (egui 0.33 family;
# rustc 1.91.1 forces 0.33, not 0.34). Standalone [workspace] for now: the repo has no root cargo
# workspace, so this crate stands alone; forming a root workspace is a future CX-106 decision.
#
# MT-004 DEVIATION (root workspace): the MT-004 contract assumed a root Cargo.toml workspace with
# handshake_core as a member, and asked for [profile.release-native] there. The repo has NO root
# workspace, and handshake_core lives at src/backend/handshake_core which is forbidden_paths for
# this MT (reuse-via-API only). Creating a root workspace would pull handshake_core + app/src-tauri
# into one workspace and risk breaking their builds + contaminating their profiles/rustflags.
# Per the orchestrator's minimal-approach instruction, the release-native profile lives in THIS
# crate's own [workspace] table (this crate is its own workspace root), which is exactly the profile
# location cargo reads for `cargo build --profile release-native -p handshake-native` run from here.
[workspace]

# release-native: for INSTALLER builds only. Dev builds use --profile dev. CI smoke tests use
# --profile release. (CONTROL-2: lto='fat' + codegen-units=1 is slow; gate fat-LTO behind the
# HANDSHAKE_LTO env var in the build pipeline — see installer/windows/BUNDLED_DEPS_POLICY.md.)
# Does NOT modify [profile.release]; this is a separate named profile.
[profile.release-native]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
# strip: the contract requested strip="symbols". On MSVC, debug info lives in a side .pdb (not the
# .exe), so the shipped .exe is already lean; strip="symbols" is honored here.
strip = "symbols"
opt-level = 3
# BUILD PATH NOTE (MAX_PATH): the `release-native` profile name is longer than `release`, which
# pushes the deepest build-script output paths (icu_*, parking_lot_core, windows_x86_64_msvc) past
# the Windows 260-char MAX_PATH limit when the crate's external target-dir (.cargo/config.toml) is
# used, causing link.exe LNK1104 ("cannot open file build_script_build.exe"). link.exe does not
# honor the registry LongPathsEnabled opt-in. The fix is to build release-native into a SHORT target
# dir: build_installer.ps1 sets CARGO_TARGET_DIR to a short path, and the single-binary proof test
# resolves the binary from CARGO_TARGET_DIR. This is an environment/path constraint, NOT a profile
# defect — the contract profile settings (fat LTO, codegen-units=1, panic=abort, strip=symbols) all
# build cleanly once the path is short. Documented in installer/windows/BUNDLED_DEPS_POLICY.md.

[workspace.metadata.handshake-native]
# Bundled-deps + installer metadata for no-context tooling. Authoritative human-readable policy is
# installer/windows/BUNDLED_DEPS_POLICY.md (GOVARTIFACTS-019 operator-prose exception).
single_binary = true
crt_static = true
bundled_fonts = ["Inter-Regular.ttf", "Inter-Bold.ttf"]
installer = "installer/windows/handshake_native.wxs"
# Two-binary install layout: native shell + the handshake_core backend (managed-postgres host).
install_payload = ["handshake-native.exe", "handshake_core.exe"]

[package]
name = "handshake-native"
version = "0.1.0"
edition = "2021"
publish = false

# cargo-bundle-style metadata (cargo-bundle is NOT used — WiX 4 is the chosen Windows installer;
# see BUNDLED_DEPS_POLICY.md "Installer tooling decision"). Kept for tooling discoverability.
[package.metadata.bundle]
name = "Handshake"
identifier = "com.handshake.native"
icon = []
resources = ["assets/fonts"]

[[bin]]
name = "handshake-native"
path = "src/main.rs"

[features]
# MT-004 bundles assets/fonts/Inter-{Regular,Bold}.ttf and turns this ON by default so the shipped
# binary always renders the Inter UI font. include_bytes! in app.rs fails at compile time with a
# clear message if the asset is missing (RISK-6 / CONTROL-6). Build without fonts via
# `--no-default-features` to fall back to eframe's default fonts (used by the size-delta proof).
default = ["bundled-fonts"]
bundled-fonts = []
# integration_tests: enables the cfg-gated live-backend layout round-trip test in
# tests/test_layout_persistence.rs (MT-009). OFF by default — that test needs managed-postgres +
# handshake_core running on 127.0.0.1:37501; it is NOT part of the default `cargo test` run.
integration_tests = []
# integration (WP-KERNEL-012 MT-008, RISK-004 / MC-002): gates the live-PG code-nav backend ACs in
# tests/test_code_nav_client.rs (AC-001/002/003 + the live-backend halves of AC-005/006/007). OFF by
# default so CI does not fail without a running handshake_core + an indexed-code workspace. Enable with
# `--features integration` against a live backend (HANDSHAKE_TEST_DB_URL or the managed backend on
# 127.0.0.1:37501). The pure-logic + standalone-render ACs run WITHOUT this feature.
integration = []

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["wgpu", "accesskit", "persistence", "default_fonts"] }
egui_tiles = { version = "0.14", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# MT-027 transport: the out-of-process MCP server runs a localhost TCP listener and (on Windows) a
# named-pipe server on the app's tokio runtime, so `net`, `io-util`, `sync`, `time` are added to the
# already-present runtime features. `net` brings `tokio::net::TcpListener` AND
# `tokio::net::windows::named_pipe`; `io-util` brings `AsyncBufReadExt`/`AsyncWriteExt` for the
# newline-delimited JSON-RPC framing; `sync` brings the shutdown broadcast; `time` bounds a slow read.
# (rt/rt-multi-thread/macros were already required by MT-002's health/workspace polls.)
# WP-KERNEL-012 MT-008 ADDS the `process` feature: the LSP client spawns the language-server
# subprocess via `tokio::process::Command` (piped stdio, focus-safe CREATE_NO_WINDOW on Windows) and
# reads/writes its stdio on the async runtime. No new dependency family — tokio is already the runtime;
# this enables the already-present process module (gated behind the `process` feature).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# WP-KERNEL-012 MT-011 rich-text document model: `thiserror` derives the error enums
# (SchemaError / TransformError / DocJsonError) in src/rich_editor/document_model/*.
# Pinned to "2" to match the thiserror 2.x ALREADY in the locked graph (the workspace
# carries thiserror 2.0.x transitively); declaring "1" would pull a SECOND v1 proc-macro
# family and create a v1/v2 duplicate (`cargo tree -d`). thiserror 2.x is API-compatible
# for the `#[derive(Error)]` + `#[error("…")]` + `#[from]` usage here. Pure-Rust, no
# native build, no new dependency family.
thiserror = "2"
# MT-027 token auth: the contract mandates a per-session HMAC token validated by constant-time compare
# via the `hmac` + `sha2` crates. These two RustCrypto crates are the only NEW dependency families this
# MT adds; both are audited, pure-Rust (no native build). `rand` (CSPRNG token bytes) is reused from the
# existing locked graph. See the MT-027 deviation notes for the per-crate justification.
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"
# base64 STANDARD-alphabet encode for the screenshot tool's `png_base64`. Already present in the locked
# graph (transitive); declared so the screenshot adapter uses the audited crate instead of a hand-rolled
# encoder.
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# WP-KERNEL-012 MT-001 code-editor foundation (RESEARCH-CORRECTED stack, MT-001 research_provenance
# wf_ffa74d6d 2026-06-22):
# - ropey: battle-tested rope buffer for cheap large-file edits + byte<->char<->line conversions.
# - tree-sitter (core 0.25) single pinned core + the `tree-sitter-language` LanguageFn shim + the
#   rust/javascript grammar crates on the shim-era line (tree-sitter-rust 0.24.x,
#   tree-sitter-javascript 0.25.x). Both grammar crates depend on `tree-sitter-language ^0.1` and
#   expose `LANGUAGE: LanguageFn` (loaded via the shim, NOT the deprecated `language()` fn), and both
#   declare core `tree-sitter ^0.25`, so cargo resolves a SINGLE core in the 0.25 line (RISK-001: no
#   duplicate tree-sitter cores — proven by `cargo tree -d`, PT-005). The shim decouples grammar
#   version from core, avoiding the duplicate-core/ABI wall as more Monaco-parity languages are added
#   (MT-008/MT-010). `tree-sitter-language` is the canonical `LanguageFn` carrier; `tree-sitter` 0.25
#   re-exports the `StreamingIterator` trait that `QueryCursor::matches` now requires (0.23+ API).
#   Pinned with Cargo.lock committed (MC-004) so the C-built grammars are reproducible. The grammar
#   crates compile their generated C parser via the `cc` crate; that links into the crt-static binary
#   cleanly (the crate already ships crt-static via .cargo/config and other native deps build the same
#   way).
ropey = "1.6"
# WP-KERNEL-012 MT-009 diff/merge editor: `similar` is the production-grade, MIT-licensed Rust diff
# library (used by insta/cargo-insta and many CLIs). It implements Myers' diff (the algorithm the
# MT-009 contract names) over slices and exposes per-line change tags via `TextDiff::from_lines` +
# `ChangeTag`. The contract explicitly sanctions `similar = "2"`. Pure-Rust, no native build, no new
# runtime stack (it is a leaf algorithm crate); Cargo.lock pins the resolved version (MC reproducible).
similar = "2"
# WP-KERNEL-012 MT-004 find/replace: the `regex` crate is Rust's standard RE2-style engine with
# LINEAR-TIME guarantees (no backtracking -> no catastrophic ReDoS — RISK-001). Already present in the
# locked graph transitively (Cargo.lock pins regex 1.12.4 via regex-automata/regex-syntax), so this
# declaration adds NO new download/dependency family. Deliberately NOT `fancy-regex` (which IS a
# backtracking, ReDoS-prone engine) per the KERNEL_BUILDER gate correction in the MT-004 contract.
regex = "1"
# WP-KERNEL-012 MT-008 LSP client: `lsp-types` is the canonical Rust crate of the LSP 3.17 protocol
# type definitions (the request/response/notification param + result structs, serde-derived). The MT
# uses it ONLY for the wire types (CompletionParams, Hover, Location, PublishDiagnosticsParams, …) and
# implements a lightweight raw JSON-RPC-over-stdio transport on top (research wf_ffa74d6d: do NOT use
# tower-lsp, which is the SERVER stack with semantically-incorrect async notification ordering; lsp-types
# is type-only and adds no runtime). Pinned to 0.95.* per the MT impl note (LSP 3.17 compatible). It is a
# pure-Rust, serde-only crate (no native build, no transitive HTTP/server stack).
lsp-types = "0.95"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
# WP-KERNEL-012 MT-010 Monaco-parity keymap: `dirs` (MIT) resolves the user home directory so the
# operator keybinding override file lives at a PORTABLE `~/.handshake/keymap.json` rather than a
# hardcoded absolute path (GLOBAL-PORTABILITY-004 / AC-007). Minimal, pure-Rust, no native build; it is
# the canonical home-dir crate used across the Rust ecosystem. Cargo.lock pins the resolved version.
dirs = "5"

# MT-027 production screenshot: the live OS-window grab uses Win32 GDI `PrintWindow` (focus-safe — never
# SetForegroundWindow/BringWindowToTop). `windows-sys` is already in the locked graph transitively; here
# it is declared with the GDI + window-enumeration features the focus-safe capture needs. Windows-only
# (the offscreen render path covers headless proof on every OS).
[target.'cfg(windows)'.dependencies]
# MT-030 ADDS the `Win32_UI_Accessibility` feature (NOT a new crate — windows-sys is already the dep)
# so the LIVE focus audit (tests/test_focus_audit_live.rs, #[ignore]) can install a REAL
# WINEVENT_SYSTEM_FOREGROUND hook via SetWinEventHook / UnhookWinEvent / WINEVENTPROC / HWINEVENTHOOK
# (those items live under Win32::UI::Accessibility in windows-sys 0.61). The WH_KEYBOARD_LL keyboard
# hook, its KBDLLHOOKSTRUCT / LLKHF_INJECTED constants, and the message-pump fns (GetMessageW /
# PeekMessageW / TranslateMessage / DispatchMessageW / PostThreadMessageW) already live under the
# Win32_UI_WindowsAndMessaging feature enabled below. No new dependency family is introduced.
#
# MT-030 HARDENING ADDS the `Win32_UI_Input_KeyboardAndMouse` feature so the LIVE audit's TEST HARNESS
# (tests/test_focus_audit_live.rs, #[ignore]) can emit exactly ONE controlled real keystroke via
# `SendInput` (carrying a known TEST dwExtraInfo cookie) to PROVE the WH_KEYBOARD_LL hook is genuinely
# live (CTRL-030-05: total_key_events > 0) before trusting an empty app-injection result. This is
# TEST-HARNESS code under tests/ only — the product focus-ban (clippy disallowed-methods + the
# tests/test_focus_audit_quiet.rs source scan, which walks only src/) still forbids SendInput in
# product src/. NOT a new dependency family: windows-sys is already the dep; this only enables an
# additional feature module that was previously listed in clippy.toml as a not-yet-reachable ban path.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Storage_Xps",
] }
# image (png): the production Windows screenshot path encodes the captured GDI bitmap to PNG. Already in
# the locked graph (egui_kittest dev-dep pulls 0.25); declared as a Windows runtime dep so the live
# OS-window capture can encode without the test profile. No new dependency family.
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu"] }
# image: TEST-ONLY (dev-dependency). NOT a new dependency family — `egui_kittest[wgpu]` already pulls
# image 0.25 into the locked graph (it returns `image::RgbaImage` from `Harness::render()`), so this is
# already compiled. Declared explicitly so the MT-027 screenshot proof can encode the rendered frame to
# PNG and assert `image::load_from_memory` decodes it (the screenshot acceptance criterion). The
# `png` feature is the same one egui_kittest enables. No runtime/product dependency is added.
image = { version = "0.25", default-features = false, features = ["png"] }
# Single-binary DLL audit (test_single_binary.rs). Reuses the MT-001 spike-proven `object` pin
# (0.36) instead of the contract's pelite suggestion: `object` is already verified on this host
# (dumpbin is absent — toolkit_spike_verdict.json), parses the PE import table the same way, and
# adds NO new dependency family. See test_single_binary.rs header for the deviation rationale.
object = "0.36"
