# WP-KERNEL-011 — Handshake native Rust GUI. Long-term home of ALL native GUI code (no webview,
# no Tauri, no Electron). Versions are the MT-001 spike-verdict proven pins (egui 0.33 family;
# rustc 1.91.1 forces 0.33, not 0.34). Standalone [workspace] for now: the repo has no root cargo
# workspace, so this crate stands alone; forming a root workspace is a future CX-106 decision.
#
# MT-004 DEVIATION (root workspace): the MT-004 contract assumed a root Cargo.toml workspace with
# handshake_core as a member, and asked for [profile.release-native] there. The repo has NO root
# workspace, and handshake_core lives at src/backend/handshake_core which is forbidden_paths for
# this MT (reuse-via-API only). Creating a root workspace would pull handshake_core + app/src-tauri
# into one workspace and risk breaking their builds + contaminating their profiles/rustflags.
# Per the orchestrator's minimal-approach instruction, the release-native profile lives in THIS
# crate's own [workspace] table (this crate is its own workspace root), which is exactly the profile
# location cargo reads for `cargo build --profile release-native -p handshake-native` run from here.
[workspace]

# release-native: for INSTALLER builds only. Dev builds use --profile dev. CI smoke tests use
# --profile release. (CONTROL-2: lto='fat' + codegen-units=1 is slow; gate fat-LTO behind the
# HANDSHAKE_LTO env var in the build pipeline — see installer/windows/BUNDLED_DEPS_POLICY.md.)
# Does NOT modify [profile.release]; this is a separate named profile.
[profile.release-native]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
# strip: the contract requested strip="symbols". On MSVC, debug info lives in a side .pdb (not the
# .exe), so the shipped .exe is already lean; strip="symbols" is honored here.
strip = "symbols"
opt-level = 3
# BUILD PATH NOTE (MAX_PATH): the `release-native` profile name is longer than `release`, which
# pushes the deepest build-script output paths (icu_*, parking_lot_core, windows_x86_64_msvc) past
# the Windows 260-char MAX_PATH limit when the crate's external target-dir (.cargo/config.toml) is
# used, causing link.exe LNK1104 ("cannot open file build_script_build.exe"). link.exe does not
# honor the registry LongPathsEnabled opt-in. The fix is to build release-native into a SHORT target
# dir: build_installer.ps1 sets CARGO_TARGET_DIR to a short path, and the single-binary proof test
# resolves the binary from CARGO_TARGET_DIR. This is an environment/path constraint, NOT a profile
# defect — the contract profile settings (fat LTO, codegen-units=1, panic=abort, strip=symbols) all
# build cleanly once the path is short. Documented in installer/windows/BUNDLED_DEPS_POLICY.md.

[workspace.metadata.handshake-native]
# Bundled-deps + installer metadata for no-context tooling. Authoritative human-readable policy is
# installer/windows/BUNDLED_DEPS_POLICY.md (GOVARTIFACTS-019 operator-prose exception).
single_binary = true
crt_static = true
bundled_fonts = ["Inter-Regular.ttf", "Inter-Bold.ttf"]
installer = "installer/windows/handshake_native.wxs"
# Two-binary install layout: native shell + the handshake_core backend (managed-postgres host).
install_payload = ["handshake-native.exe", "handshake_core.exe"]

[package]
name = "handshake-native"
version = "0.1.0"
edition = "2021"
publish = false

# cargo-bundle-style metadata (cargo-bundle is NOT used — WiX 4 is the chosen Windows installer;
# see BUNDLED_DEPS_POLICY.md "Installer tooling decision"). Kept for tooling discoverability.
[package.metadata.bundle]
name = "Handshake"
identifier = "com.handshake.native"
icon = []
resources = ["assets/fonts"]

[[bin]]
name = "handshake-native"
path = "src/main.rs"

[features]
# MT-004 bundles assets/fonts/Inter-{Regular,Bold}.ttf and turns this ON by default so the shipped
# binary always renders the Inter UI font. include_bytes! in app.rs fails at compile time with a
# clear message if the asset is missing (RISK-6 / CONTROL-6). Build without fonts via
# `--no-default-features` to fall back to eframe's default fonts (used by the size-delta proof).
default = ["bundled-fonts"]
bundled-fonts = []
# integration_tests: enables the cfg-gated live-backend layout round-trip test in
# tests/test_layout_persistence.rs (MT-009). OFF by default — that test needs managed-postgres +
# handshake_core running on 127.0.0.1:37501; it is NOT part of the default `cargo test` run.
integration_tests = []
# integration (WP-KERNEL-012 MT-008, RISK-004 / MC-002): gates the live-PG code-nav backend ACs in
# tests/test_code_nav_client.rs (AC-001/002/003 + the live-backend halves of AC-005/006/007). OFF by
# default so CI does not fail without a running handshake_core + an indexed-code workspace. Enable with
# `--features integration` against a live backend (HANDSHAKE_TEST_DB_URL or the managed backend on
# 127.0.0.1:37501). The pure-logic + standalone-render ACs run WITHOUT this feature.
integration = []
# wgpu_screenshots (WP-KERNEL-012 MT-024, adversarial-review hardening): OPT-IN gate for the `.wgpu()`
# real-GPU screenshot test (HBR-VIS PNG). OFF by default so the default `cargo test` does NOT add a
# concurrent wgpu device/adapter binary from THIS MT to the test process tree. On Windows multiple
# `.wgpu()` test binaries holding wgpu devices at once can crash a co-scheduled wgpu binary with
# STATUS_ACCESS_VIOLATION (0xc0000005); the per-binary in-file WGPU_SERIAL_GUARD only serializes WITHIN
# one process and gives zero cross-process protection. That underlying crash is a PRE-EXISTING, WP-wide
# hazard across the existing wgpu test binaries (it reproduces under forced concurrent scheduling even
# with the MT-024 screenshot removed); the WP-level cross-binary serialization fix is outside this MT's
# allowed_paths and is routed as a handoff blocker. The AccessKit/structural/request-shape proofs
# (PROOF1-5, AC1-9) run WITHOUT this feature, so the default suite carries the AC coverage. Run the
# screenshot proof explicitly with:
#   cargo test --features wgpu_screenshots --test test_sidebar_panel sidebar_panel_screenshot
wgpu_screenshots = []

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["wgpu", "accesskit", "persistence", "default_fonts"] }
egui_tiles = { version = "0.14", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# MT-027 transport: the out-of-process MCP server runs a localhost TCP listener and (on Windows) a
# named-pipe server on the app's tokio runtime, so `net`, `io-util`, `sync`, `time` are added to the
# already-present runtime features. `net` brings `tokio::net::TcpListener` AND
# `tokio::net::windows::named_pipe`; `io-util` brings `AsyncBufReadExt`/`AsyncWriteExt` for the
# newline-delimited JSON-RPC framing; `sync` brings the shutdown broadcast; `time` bounds a slow read.
# (rt/rt-multi-thread/macros were already required by MT-002's health/workspace polls.)
# WP-KERNEL-012 MT-008 ADDS the `process` feature: the LSP client spawns the language-server
# subprocess via `tokio::process::Command` (piped stdio, focus-safe CREATE_NO_WINDOW on Windows) and
# reads/writes its stdio on the async runtime. No new dependency family — tokio is already the runtime;
# this enables the already-present process module (gated behind the `process` feature).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# WP-KERNEL-012 MT-011 rich-text document model: `thiserror` derives the error enums
# (SchemaError / TransformError / DocJsonError) in src/rich_editor/document_model/*.
# Pinned to "2" to match the thiserror 2.x ALREADY in the locked graph (the workspace
# carries thiserror 2.0.x transitively); declaring "1" would pull a SECOND v1 proc-macro
# family and create a v1/v2 duplicate (`cargo tree -d`). thiserror 2.x is API-compatible
# for the `#[derive(Error)]` + `#[error("…")]` + `#[from]` usage here. Pure-Rust, no
# native build, no new dependency family.
thiserror = "2"
# MT-027 token auth: the contract mandates a per-session HMAC token validated by constant-time compare
# via the `hmac` + `sha2` crates. These two RustCrypto crates are the only NEW dependency families this
# MT adds; both are audited, pure-Rust (no native build). `rand` (CSPRNG token bytes) is reused from the
# existing locked graph. See the MT-027 deviation notes for the per-crate justification.
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"
# base64 STANDARD-alphabet encode for the screenshot tool's `png_base64`. Already present in the locked
# graph (transitive); declared so the screenshot adapter uses the audited crate instead of a hand-rolled
# encoder.
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# WP-KERNEL-012 MT-001 code-editor foundation (RESEARCH-CORRECTED stack, MT-001 research_provenance
# wf_ffa74d6d 2026-06-22):
# - ropey: battle-tested rope buffer for cheap large-file edits + byte<->char<->line conversions.
# - tree-sitter (core 0.25) single pinned core + the `tree-sitter-language` LanguageFn shim + the
#   rust/javascript grammar crates on the shim-era line (tree-sitter-rust 0.24.x,
#   tree-sitter-javascript 0.25.x). Both grammar crates depend on `tree-sitter-language ^0.1` and
#   expose `LANGUAGE: LanguageFn` (loaded via the shim, NOT the deprecated `language()` fn), and both
#   declare core `tree-sitter ^0.25`, so cargo resolves a SINGLE core in the 0.25 line (RISK-001: no
#   duplicate tree-sitter cores — proven by `cargo tree -d`, PT-005). The shim decouples grammar
#   version from core, avoiding the duplicate-core/ABI wall as more Monaco-parity languages are added
#   (MT-008/MT-010). `tree-sitter-language` is the canonical `LanguageFn` carrier; `tree-sitter` 0.25
#   re-exports the `StreamingIterator` trait that `QueryCursor::matches` now requires (0.23+ API).
#   Pinned with Cargo.lock committed (MC-004) so the C-built grammars are reproducible. The grammar
#   crates compile their generated C parser via the `cc` crate; that links into the crt-static binary
#   cleanly (the crate already ships crt-static via .cargo/config and other native deps build the same
#   way).
ropey = "1.6"
# WP-KERNEL-012 MT-009 diff/merge editor: `similar` is the production-grade, MIT-licensed Rust diff
# library (used by insta/cargo-insta and many CLIs). It implements Myers' diff (the algorithm the
# MT-009 contract names) over slices and exposes per-line change tags via `TextDiff::from_lines` +
# `ChangeTag`. The contract explicitly sanctions `similar = "2"`. Pure-Rust, no native build, no new
# runtime stack (it is a leaf algorithm crate); Cargo.lock pins the resolved version (MC reproducible).
similar = "2"
# WP-KERNEL-012 MT-004 find/replace: the `regex` crate is Rust's standard RE2-style engine with
# LINEAR-TIME guarantees (no backtracking -> no catastrophic ReDoS — RISK-001). Already present in the
# locked graph transitively (Cargo.lock pins regex 1.12.4 via regex-automata/regex-syntax), so this
# declaration adds NO new download/dependency family. Deliberately NOT `fancy-regex` (which IS a
# backtracking, ReDoS-prone engine) per the KERNEL_BUILDER gate correction in the MT-004 contract.
regex = "1"
# WP-KERNEL-012 MT-008 LSP client: `lsp-types` is the canonical Rust crate of the LSP 3.17 protocol
# type definitions (the request/response/notification param + result structs, serde-derived). The MT
# uses it ONLY for the wire types (CompletionParams, Hover, Location, PublishDiagnosticsParams, …) and
# implements a lightweight raw JSON-RPC-over-stdio transport on top (research wf_ffa74d6d: do NOT use
# tower-lsp, which is the SERVER stack with semantically-incorrect async notification ordering; lsp-types
# is type-only and adds no runtime). Pinned to 0.95.* per the MT impl note (LSP 3.17 compatible). It is a
# pure-Rust, serde-only crate (no native build, no transitive HTTP/server stack).
lsp-types = "0.95"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
# WP-KERNEL-012 MT-010 Monaco-parity keymap: `dirs` (MIT) resolves the user home directory so the
# operator keybinding override file lives at a PORTABLE `~/.handshake/keymap.json` rather than a
# hardcoded absolute path (GLOBAL-PORTABILITY-004 / AC-007). Minimal, pure-Rust, no native build; it is
# the canonical home-dir crate used across the Rust ecosystem. Cargo.lock pins the resolved version.
dirs = "5"
# WP-KERNEL-012 MT-014 embed NodeViews: the `image` crate (0.25) decodes asset bytes (PNG/JPEG/WebP/GIF)
# off the egui UI thread (tokio::spawn_blocking, MC-001), then the decoded RGBA bytes are uploaded as an
# egui TextureHandle on the UI thread. `image` is ALREADY in the locked graph (egui_kittest[wgpu] dev-dep
# + the cfg(windows) screenshot path both pull 0.25), so this is NOT a new dependency family — it is the
# SAME 0.25 line, declared as a cross-platform runtime dep with the four decode formats the contract
# names (the image-embed views run on every OS, so the decode dep cannot stay cfg(windows)-only). The
# previous cfg(windows) `image = {png}` and the `[dev-dependencies]` `image = {png}` are reconciled to
# this single cross-platform declaration so the locked graph carries exactly ONE feature-unified `image`
# entry (no png-only vs png+jpeg+webp+gif split). NO `open` crate is added: per the KERNEL_BUILDER gate +
# MT-010 finding, video uses a poster/play-button/filename/content-URL PLACEHOLDER (in-process decode is
# a future MT); open::that() steals OS focus (HBR-QUIET) so it is deliberately omitted.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
# WP-KERNEL-012 MT-017 properties panel: `chrono` (0.4) parses the backend ISO-8601 `created_at`/
# `updated_at` strings (`DateTime::parse_from_rfc3339`, which handles both `Z` and `+00:00`) and
# formats them as a human-readable LOCAL date. The `clock` feature brings `chrono::Local`; MC-003 wraps
# the local-offset resolution in a fallback to UTC (`tracing::warn` + no panic) because some headless /
# minimal OS configs have no timezone database. chrono is the canonical pure-Rust date crate (no native
# build); Cargo.lock pins the resolved version. The native crate is standalone, so chrono is NOT yet in
# its locked graph (the handshake_core backend's chrono is a SEPARATE crate's graph) — this is the only
# NEW dependency family MT-017 adds. Clipboard reuses the EXISTING `egui::Context::copy_text` surface
# (used in app.rs / debug_console.rs), so NO `arboard` direct dep is added.
# WP-KERNEL-012 MT-067 (E10 Calendar interop): the `serde` feature is added so the Calendar interop domain
# types (`CalendarEvent`/`ActivitySpan` with `DateTime<Utc>` window fields) derive `Deserialize` directly
# from the backend ISO-8601 wire (RFC-3339) — no manual string parse + no second date type. This is a
# feature ADD on the already-present `chrono`, NOT a new dependency family.
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
# WP-KERNEL-012 MT-036 (E5 — one event ledger): `uuid` (v4) generates the per-event `event_id` and the
# per-session `session_id` (a non-nil UUID the verified Flight Recorder `runtime_chat_event` endpoint
# REQUIRES). uuid 1.23.x is ALREADY in the locked graph transitively (Cargo.lock pins 1.23.3 via the egui/
# wasm + flight-recorder stack), so declaring it adds NO new dependency family — it only enables the `v4`
# feature so the native crate can mint ids directly. Pure-Rust, no native build; Cargo.lock pins the version.
uuid = { version = "1", features = ["v4"] }
# WP-KERNEL-012 MT-059 wiki-page markdown rendering: `pulldown-cmark` (0.11) is the de-facto Rust
# CommonMark parser (pure-Rust, MIT/Apache-2.0; used by mdBook and docs.rs). The shared
# `rich_editor::markdown_render` adapter runs it over the read-only wiki projection `rendered_content`
# string (GFM tables + strikethrough enabled via Options) and folds its FLAT event stream into typed
# `MdBlock`/`MdSpan` values, which `render_blocks` then paints REUSING the MT-012 line_layout styling
# constants (heading scale / quote bar / code frame / list indent). It is the ONLY new dependency family
# MT-059 adds; pure-Rust, no native build, no transitive HTTP/server stack. `default-features = false`
# drops the `getopts` CLI feature (only the library parser is used); the parser itself is always built.
# Cargo.lock pins the resolved version (commit it). The contract's "same Cargo.toml MT-012 added
# cosmic-text to" is STALE — MT-012 used egui LayoutJob/Galley, NOT cosmic-text; only pulldown-cmark is added.
pulldown-cmark = { version = "0.11", default-features = false }
# WP-KERNEL-012 MT-020 save-to-format file dialog: `rfd` (0.14) is the native Rust file-dialog crate
# (Windows: the Win32 IFileSaveDialog COM API; no wry/webview dependency, unlike tauri-plugin-dialog).
# It is the ONLY new dependency family MT-020 adds — `sha2` (canonical draft hash) and `base64` (HTML
# self-contained data: URLs) are ALREADY workspace deps (declared above for MT-027). The dialog is a
# thin, USER-INITIATED shell behind the mockable `FileSaveSink` trait: the real `rfd::FileDialog` runs
# on a DEDICATED std::thread (NOT the egui frame thread — HBR-QUIET / MC-004), never on a background or
# automated run, so it can never steal OS focus during model-driven testing. Headless tests use the
# `PathFileSaveSink` (writes to a path, no dialog), so `rfd` is exercised only on a real operator click.
# Pure-Rust crate wrapping native OS dialogs; Cargo.lock pins the resolved version. Default features
# are kept: on Windows the default backend is the native Win32 IFileDialog COM API (no GTK/portal dep
# is pulled on Windows). The synchronous `FileDialog::save_file()` is used on the dedicated dialog
# thread, so no async runtime feature is needed.
rfd = "0.14"
# WP-KERNEL-012 MT-077 (E13 — i18n text segmentation): the two field-standard, mature, pure-Rust Unicode
# segmentation crates (research verified 2026-06-26; reject hand-rolled char-class tables per the MT note).
# - `unicode-segmentation` (UAX#29): grapheme-cluster + word boundaries — graphemes()/unicode_words()/
#   GraphemeCursor for the grapheme caret + word count. ALREADY in the locked graph transitively (1.13.x via
#   the existing dependency tree), so declaring it as a direct dep adds NO new family — it only makes the
#   API directly callable. MIT OR Apache-2.0.
# - `unicode-linebreak` (UAX#14): line-break opportunities incl. CJK + kinsoku classes. The ONE NEW
#   dependency family MT-077 adds (~159 LOC + a generated Unicode table; Apache-2.0; pure-Rust, no native
#   build). Supplements egui's native CJK Galley wrap where it falls short (Korean Hangul + opening-bracket
#   kinsoku — verified gaps in epaint-0.33.3). Cargo.lock pins both resolved versions (commit it).
unicode-segmentation = "1.13"
unicode-linebreak = "0.1"

# MT-027 production screenshot: the live OS-window grab uses Win32 GDI `PrintWindow` (focus-safe — never
# SetForegroundWindow/BringWindowToTop). `windows-sys` is already in the locked graph transitively; here
# it is declared with the GDI + window-enumeration features the focus-safe capture needs. Windows-only
# (the offscreen render path covers headless proof on every OS).
[target.'cfg(windows)'.dependencies]
# MT-030 ADDS the `Win32_UI_Accessibility` feature (NOT a new crate — windows-sys is already the dep)
# so the LIVE focus audit (tests/test_focus_audit_live.rs, #[ignore]) can install a REAL
# WINEVENT_SYSTEM_FOREGROUND hook via SetWinEventHook / UnhookWinEvent / WINEVENTPROC / HWINEVENTHOOK
# (those items live under Win32::UI::Accessibility in windows-sys 0.61). The WH_KEYBOARD_LL keyboard
# hook, its KBDLLHOOKSTRUCT / LLKHF_INJECTED constants, and the message-pump fns (GetMessageW /
# PeekMessageW / TranslateMessage / DispatchMessageW / PostThreadMessageW) already live under the
# Win32_UI_WindowsAndMessaging feature enabled below. No new dependency family is introduced.
#
# MT-030 HARDENING ADDS the `Win32_UI_Input_KeyboardAndMouse` feature so the LIVE audit's TEST HARNESS
# (tests/test_focus_audit_live.rs, #[ignore]) can emit exactly ONE controlled real keystroke via
# `SendInput` (carrying a known TEST dwExtraInfo cookie) to PROVE the WH_KEYBOARD_LL hook is genuinely
# live (CTRL-030-05: total_key_events > 0) before trusting an empty app-injection result. This is
# TEST-HARNESS code under tests/ only — the product focus-ban (clippy disallowed-methods + the
# tests/test_focus_audit_quiet.rs source scan, which walks only src/) still forbids SendInput in
# product src/. NOT a new dependency family: windows-sys is already the dep; this only enables an
# additional feature module that was previously listed in clippy.toml as a not-yet-reachable ban path.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Storage_Xps",
] }
# image: the production Windows screenshot path encodes the captured GDI bitmap to PNG. The cross-platform
# `image` runtime dep in [dependencies] (MT-014, features png+jpeg+webp+gif) now covers this Windows use
# (png is included), so the previous cfg(windows)-only `image = {png}` declaration is REMOVED here to keep
# a single feature-unified `image` entry in the locked graph (no png-only vs png+jpeg+webp+gif duplicate).

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu"] }
# image: the MT-027 screenshot proof + the MT-014 embed-decode tests encode/decode PNG and decode JPEG/
# WebP/GIF asset bytes. The cross-platform `image` runtime dep in [dependencies] (MT-014, features
# png+jpeg+webp+gif) is already compiled for the crate, so a separate png-only dev-dependency is NO longer
# needed and is REMOVED to keep a single feature-unified `image` entry in the locked graph. Tests reach
# `image::load_from_memory` / `image.save(...)` through the runtime dependency.
# Single-binary DLL audit (test_single_binary.rs). Reuses the MT-001 spike-proven `object` pin
# (0.36) instead of the contract's pelite suggestion: `object` is already verified on this host
# (dumpbin is absent — toolkit_spike_verdict.json), parses the PE import table the same way, and
# adds NO new dependency family. See test_single_binary.rs header for the deviation rationale.
object = "0.36"

# WP-KERNEL-012 MT-074 (E10 other-pillar interop proof suite): the contract mandates registering the
# suite as an explicit [[test]] with harness = true (the default libtest harness — the suite uses #[test]
# functions, kittest harnesses, and the standard #[ignore]/#[cfg(feature="integration")] gates). The file
# would also be auto-discovered under tests/, but the explicit [[test]] is the contract requirement and
# pins the canonical test name the proof_targets grep (`cargo test -p handshake-native -- other_pillar_interop`).
[[test]]
name = "test_other_pillar_interop_proofs"
path = "tests/test_other_pillar_interop_proofs.rs"
harness = true
